--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -7,7 +7,7 @@
 		<add key="OnlineHelpURL" value="http://code.google.com/p/goontools/wiki/MonoBPMonitor"/>
 		<!-- Don't show any update elements -->
     	<!-- Useful for Linux packagers who need control over updates -->
-        <add key="ShowUpdate" value="false" />
+        <add key="AllowCustomUpdate" value="false" />
 		<!-- For Windows where there is not Gtk Theme installed -->
     	<!-- Allows the setting of custome themes in Windows enviroments -->
     	<!-- Not Intended for use with Linux -->
