--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -7,11 +7,11 @@
 		<add key="OnlineHelpURL" value="http://code.google.com/p/goontools/wiki/MonoBPMonitor"/>
 		<!-- Don't show any update elements -->
     	<!-- Useful for Linux packagers who need control over updates -->
-        <add key="AllowCustomUpdate" value="false" />
+        <add key="AllowCustomUpdate" value="true" />
 		<!-- For Windows where there is not Gtk Theme installed -->
     	<!-- Allows the setting of custome themes in Windows enviroments -->
     	<!-- Not Intended for use with Linux -->
-        <add key="AllowCustomTheme" value="false" />
+        <add key="AllowCustomTheme" value="true" />
     	<!-- Used for debugging -->
 		<add key="Debug" value="true"/>
     </appSettings>
