* MonoBPMonitor/images/edit.png: * MonoBPMonitor/Common/Common.cs: * MonoBPMonitor/gtk-gui/gui.stetic: * MonoBPMonitor/Common/MetaInfo.cs: * MonoBPMonitor/MonoBPMonitor.csproj: * MonoBPMonitor/Reports/MainEntry/EntryTreeView.cs: * MonoBPMonitor/gtk-gui/MonoBPMonitor.MainWindow.cs: * MonoBPMonitor/Reports/MainEntry/EntryTreeView.Designer.cs:

--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/MonoBPMonitor.csproj
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/MonoBPMonitor.csproj
@@ -236,7 +236,12 @@
     <Compile Include="Tools\frmBackupRestore.cs" />
     <Compile Include="gtk-gui\MonoBPMonitor.frmBackupRestore.cs" />
     <Compile Include="Tools\frmOptions.cs" />
-    <EmbeddedResource Include="images\BackupRestore.png" />
+    <EmbeddedResource Include="images\BackupRestore.png">
+      <LogicalName>BackupRestore.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\edit.png">
+      <LogicalName>edit.png</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
