--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -12,6 +12,12 @@
     	<!-- Allows the setting of custome themes in Windows enviroments -->
     	<!-- Not Intended for use with Linux -->
         <add key="AllowCustomTheme" value="true" />
+		<add key="CustomThemePath" value="C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\MonoBPMonitor\src\MonoBPMonitor\bin\Debug\Themes\Elegance\gtk-2.0\" />
+        <!--
+        <add key="CustomThemePath" value="C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\MonoBPMonitor\src\MonoBPMonitor\bin\Debug\Themes\Neutrino\gtk-2.0\" />
+        <add key="CustomThemePath" value="C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\MonoBPMonitor\src\MonoBPMonitor\bin\Debug\Themes\BlueHeart\gtk-2.0\" />
+        <add key="CustomThemePath" value="C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\MonoBPMonitor\src\MonoBPMonitor\bin\Debug\Themes\Afterhours\gtk-2.0\" />
+        -->
     	<!-- Used for debugging -->
 		<add key="Debug" value="true"/>
     </appSettings>
